# zeta-node

./: .gitignore  Cargo.toml  Dockerfile  README.md  format_and_lint.sh
.config/: taplo.toml  zepter.yaml
.github/: dependabot.yml
.github/actions/macos-dependencies/: action.yml
.github/actions/ubuntu-dependencies/: action.yml
.github/workflows/: ci.yml  release-binaries.yml
.github/workflows/_disabled/: release-docker.yml  release.yml  test-zombienet.yml
_scripts/: build-genesis-wasm-and-head.sh  build-weights.sh  build_genesis_wasm_and_head.sh  build_weights.sh  format-and-lint.sh  format_and_lint.sh  frame_weight_template.hbs  generate-chain-specs.sh  generate_chain_specs.sh  generate_weights.sh  launch-zombienet-omni-node.sh  launch-zombienet.sh  test.sh  try-runtime.sh
_zombienet/: zombienet-omni-node.toml  zombienet.toml
node/: Cargo.toml  README.md
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/: README.md
pallets/zeta/: Cargo.toml
pallets/zeta/src/: benchmarking.rs  lib.rs  mock_runtime.rs  tests.rs  weights.rs
runtime/: Cargo.toml  README.md  build.rs
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs  xcm_config.rs
runtime/src/weights/: block_weights.rs  extrinsic_weights.rs  mod.rs  paritydb_weights.rs  rocksdb_weights.rs
zombienet-config/: zombienet-omni-node.toml  zombienet.toml
