[package]
name = "zeta-node"
description = "Zeta blockchain node."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false
build = "build.rs"

[lints]
workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
codec = { workspace = true, default-features = true }
color-print = { workspace = true }
docify = { workspace = true }
futures = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
log = { workspace = true, default-features = true }
polkadot-sdk = { workspace = true, features = ["node", "polkadot-primitives"] }
prometheus-endpoint.default-features = true
prometheus-endpoint.workspace = true
serde = { features = ["derive"], workspace = true, default-features = true }
zeta-runtime.workspace = true

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = ["log/std", "polkadot-sdk/std", "zeta-runtime/std"]
runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
    "zeta-runtime/runtime-benchmarks",
]
try-runtime = ["polkadot-sdk/try-runtime", "zeta-runtime/try-runtime"]
